// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #7 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment
=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #8 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */
=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #9 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment

=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #10 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */

=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #11 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================

// comment

=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #12 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================

/* comment */

=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #13 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
// comment
;
=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #14 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/* comment */
;
=====================================output=====================================
/* comment */

================================================================================
`;

exports[`snippet: #15 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
;
// comment

=====================================output=====================================
// comment

================================================================================
`;

exports[`snippet: #16 format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================

;/* comment */

=====================================output=====================================
/* comment */

================================================================================
`;
